chore: Update OpenSpec tooling to opsx workflow
Remove legacy openspec-* workflows and commands, update AGENTS.md
with streamlined project documentation.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>